--- a/src/app/components/pages/warranty/warranty-policy/create/create.component.html
+++ b/src/app/components/pages/warranty/warranty-policy/create/create.component.html
@@ -19,7 +19,10 @@
             <div class="grid p-fluid">
                 <div class="col-12 md:col-6">
                     <div class="field">
-                        <label htmlFor="name1"
+                        <label
+                            style="font-weight: 600"
+                            class="block text-900 text-large font-weight mb-2"
+                            htmlFor="name1"
                             >Tên chính sách bảo hành<span class="red-asterisk"
                                 >*</span
                             ></label
@@ -51,7 +54,9 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field">
-                        <label htmlFor="name1"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="name1"
                             >Kỳ hạn bảo hành<span class="red-asterisk"
                                 >*</span
                             ></label
@@ -87,7 +92,7 @@
                 </div>
                 <!-- <div class="col-12 md:col-3">
                     <div class="field">
-                        <label htmlFor="name1"></label>
+                        <label style="font-weight: 600"   class="block text-900 text-large font-weight mb-2"htmlFor="name1"></label>
                     </div>
                 </div> -->
             </div>
@@ -108,7 +113,7 @@
                 <button
                     type="submit"
                     pButton
-                    label="Lưu"
+                    label="Thêm mới"
                     icon="pi pi-check"
                     class="p-button-primary"
                 ></button>
