--- a/src/app/components/pages/branch/create/create.component.html
+++ b/src/app/components/pages/branch/create/create.component.html
@@ -18,7 +18,9 @@
             <div class="grid p-fluid">
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="name1"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="name1"
                             >Tên chi nhánh<span class="red-asterisk"
                                 >*</span
                             ></label
@@ -49,7 +51,9 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="phoneNumber"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="phoneNumber"
                             >Số điện thoại<span class="red-asterisk"
                                 >*</span
                             ></label
@@ -91,7 +95,11 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="email">Email</label>
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="email"
+                            >Email</label
+                        >
                         <input
                             pInputText
                             id="email"
@@ -119,7 +127,9 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="address"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="address"
                             >Địa chỉ<span class="red-asterisk">*</span></label
                         >
                         <input
@@ -148,7 +158,9 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="address"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="address"
                             >Khu vực<span class="red-asterisk">*</span></label
                         >
                         <p-dropdown
@@ -200,7 +212,9 @@
                 </div>
                 <div class="col-12 md:col-6">
                     <div class="field mb-0">
-                        <label htmlFor="wardID"
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="wardID"
                             >Phường xã<span class="red-asterisk">*</span></label
                         >
                         <p-dropdown
@@ -249,7 +263,11 @@
                         <p-inputSwitch
                             formControlName="isActive"
                         ></p-inputSwitch>
-                        <label htmlFor="address">Hoạt động</label>
+                        <label
+                            style="font-weight: 600; color: #000"
+                            htmlFor="address"
+                            >Hoạt động</label
+                        >
                         <!-- <p-inputSwitch [(ngModel)]="checked" /> -->
                     </div>
                 </div>
@@ -271,8 +289,8 @@
                 <button
                     type="submit"
                     pButton
-                    label="Lưu"
-                    icon="pi pi-check"
+                    label="Thêm mới"
+                    icon="pi pi-plus"
                     class="p-button-primary"
                 ></button>
             </div>
