--- a/src/app/components/pages/products/update-product/update-product.component.html
+++ b/src/app/components/pages/products/update-product/update-product.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="productForm" (ngSubmit)="checkAndOnSubmit()">
+<form [formGroup]="productForm" (ngSubmit)="onSubmitUpdate()">
     <div class="grid">
         <div class="col-12">
             <p-toolbar styleClass="mb-2">
@@ -320,7 +320,7 @@
                             </div>
                             <div class="col-lg-12 mt-5">
                               <div style="display: flex">
-                                <p-inputSwitch formControlName="warrantySwitch" (onChange)="onWarrantySwitchChange($event)"></p-inputSwitch>
+                                <p-inputSwitch formControlName="warning" (onChange)="onWarrantySwitchChange($event)"></p-inputSwitch>
                                 <label style="padding: 3px 10px" class="labelip">Áp dụng bảo hành</label>
                               </div>
                             
@@ -328,10 +328,11 @@
                               <p-dropdown 
                                 *ngIf="isWarrantyApplied" 
                                 [options]="warrantyOptions" 
-                                optionLabel="name" 
+                                optionLabel="shortenedName" 
                                 formControlName="warrantyPolicyId"
                                 [style]="{ height: '40px', width: '30%' }"
                                 optionValue="id"
+                                [showClear]="true"
                                 placeholder="Chọn chính sách bảo hành">
                               </p-dropdown>
                             </div>         
@@ -732,7 +733,7 @@
                                       >
                                         <ng-template pTemplate="header">
                                           <tr>
-                                            <th style="width: 5%">STT</th>
+                                            <!-- <th style="width: 5%">STT</th> -->
                                             <th style="width: 30%">Tên phân loại</th>
                                             <th style="width: 20%">SKU phân loại</th>
                                             <th style="width: 10%">Mã vạch/Mã Barcode</th>
@@ -740,13 +741,10 @@
                                             <th  *ngIf="productForm.get('productType').value === 0">Tồn kho</th>
                                           </tr>
                                         </ng-template>
-                                        <ng-template
-                                          pTemplate="body"
-                                          let-row
-                                          let-i="rowIndex"
+                                        <ng-template pTemplate="body" let-row let-i="rowIndex"
                                         >                       
                                           <tr *ngFor="let value2 of valueProperties2Array.controls; let j = index">
-                                            <td>1</td>
+                                            <!-- <td>1</td> -->
                                             <td>
                                                 <div style="display: flex;">
                                                     <div *ngIf="!getLinkImage(i) && getBase64Image(i)">
@@ -782,9 +780,6 @@
                                                   [style]="{ height: '35px', width: '200px' }"
                                                   (input)="onInput3($event)"
                                                 />
-                                                <div *ngIf="showNameError15" class="error-message">
-                                                  {{ errorMessage3 }}
-                                                </div>
                                             </td>
                                             <td>
                                               <input
@@ -795,9 +790,6 @@
                                                 (input)="onInput2($event)"
                                                 [style]="{ height: '35px', width: '200px' }"
                                               />
-                                              <div *ngIf="showNameError14" class="error-message">
-                                                {{ errorMessage2 }}
-                                              </div>
                                               
                                             </td>
                                             <td>
